<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <FrameLayout
        android:layout_above="@+id/linear"
        android:id="@+id/main_f1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/btn"
                style="@style/apphome_bu"
                android:drawableTop="@drawable/ic_nav_home"
                android:text="@string/app_name"
                android:onClick="btn2"

                />

            <RadioButton
                style="@style/apphome_bu"
                android:drawableTop="@drawable/ic_nav_class"
                android:text="@string/app_home"
                android:id="@+id/btn2"

                android:onClick="btn1"
                />

            <RadioButton
                android:id="@+id/btn3"
                style="@style/apphome_bu"
                android:drawableTop="@drawable/ic_nav_cart"
                android:text="@string/app_class"
                android:onClick="btn3"
                />

            <RadioButton
                android:id="@+id/btn4"
                style="@style/apphome_bu"
                android:drawableTop="@drawable/ic_nav_user"

                android:onClick="btn4"
                android:text="个人中心"
                />
        </RadioGroup>

    </LinearLayout>






</RelativeLayout>
